--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -14,6 +14,9 @@
 // Include common definitions from above.
 apply from: '../build.common.gradle'
 
+dependencies {
+    implementation 'org.openftc:easyopencv:1.3.2'
+}
 repositories {
     maven { url = "https://dl.bintray.com/first-tech-challenge/ftcsdk/" }
 }
